--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ header {
   background-color: #f9f7f7;
   width: 35%;
   padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 .section-first {
@@ -33,6 +35,9 @@ header {
 .section-input > input {
   width: 48%;
   height: 30px;
+  border: #fff;
+  border-radius: 6px;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 .section-button {
@@ -43,6 +48,16 @@ header {
 
 button {
   font-size: 10px;
+  border: none;
+  border-radius: 6px;
+  background-color: mediumpurple;
+  color: #f9f7f7;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: mediumslateblue;
 }
 
 .section-second {
@@ -53,9 +68,11 @@ button {
   background-color: white;
   font-size: 12px;
   font-weight: bold;
-  border: 1px solid slategray;
   width: 50%;
   height: 35px;
+  border: #fff;
+  border-radius: 6px;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 .section-third {
@@ -89,6 +106,6 @@ button {
   font-weight: bold;
 }
 
-footer {
-  font-size: 10px;
+#f-to-c {
+  display: none;
 }
